# nix

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  README.md  configuration.nix  flake.nix  gen34-root  home.nix  home.nix.bak  result  statix.toml  streams.txt
.devenv/: nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal
.direnv/: flake-profile-1-link  flake-profile-3-link  flake-profile-4-link  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 012fnh9vr9sjmwmld3cq3pd4k89wcz4x-source  03c4i3h6aaym1al1mknaly7gd20dbmn9-source  07wfszlk7rkfk8bqmiaqf9k2qijq4cvy-source  (+24 more)
.templates/: auto_load_git_deps.nix.bak
.templates/bevy/: flake.nix
home/file_snippets/py/: flake.nix  pyproject.toml  ruff.toml
home/file_snippets/py/presets/default/: pyproject.toml
home/file_snippets/py/presets/default/src/: __init__.py  __main__.py
hosts/: README.md
lib/: README.md  colmenaSystem.nix  default.nix  macosSystem.nix  nixosSystem.nix
machines/: README.md  mod.nix
modules/: dune.nix  fenix.nix.bak  sops.nix
ongoing_debug/: 2026-03-26_amd-vi-iommu-stall.md  2026-05-20_obs-virtual-mic-monitor-dropouts.md  2026-06-05_slow-shutdown.md  2026-07-11_nix-develop-direnv-offline.md  firefox-gpu-acceleration.md  rust-scripts-offline.md
os/: configuration.nix  start_sway.sh
outputs/: default.nix
overlays/: graphify.nix  metascalp.nix  rnote-main.nix  sierra-chart.nix  tiger-trade.nix  wine-wrapper.nix  zeroclaw.nix
secrets/: default.yaml
vars/: default.nix
(+5515 files in other folders)
